--- a/EncarAlquiler/app/views/tipos/edit.html.erb
+++ b/EncarAlquiler/app/views/tipos/edit.html.erb
@@ -1,5 +1,14 @@
-<h1 class="text-center text-uppercase container">
-	Editar tipo de habitacion
-	<%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-default btn-sm' %>
-</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+			<div class="col-md-8 col-md-offset-2">
+				<h1 class="mycss">
+					Editar tipo
+					<%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-default btn-sm' %>
+				</h1>
+			</div>
+		</div>
+	</div>
+</div>
 <%= render 'form' %>
+
