--- a/EncarAlquiler/app/views/habitaciones/_form.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for(@habitacion) do |f| %>
 <div class="container">
-    <div class="col-md-12">
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
         <% if @habitacion.errors.any? %>
         <div  class="alert alert-dismissible alert-danger">
             <button type="button" class="close" data-dismiss="alert">×</button>
@@ -12,10 +13,6 @@
             </ul>
         </div>
         <% end %>
-    </div>
-</div>
-<div class="container">
-    <div class="col-md-12">
         <div class="CSS_Table_Example">
             <table>
                 <tr>
@@ -59,5 +56,6 @@
             </table>
         </div>
     </div>
+</div>
 </div>
 <% end %>
