--- a/EncarAlquiler/app/views/locatarios/_form.html.erb
+++ b/EncarAlquiler/app/views/locatarios/_form.html.erb
@@ -1,51 +1,45 @@
 <%= form_for(@locatario) do |f| %>
   <div class="container">
-  <div class="col-md-12">
-  <% if @locatario.errors.any? %>
-    <div  class="alert alert-dismissible alert-danger">
-      <button type="button" class="close" data-dismiss="alert">×</button>
-      <h2><%= pluralize(@locatario.errors.count, "error") %> complete los datos antes de guardar:</h2>
-      <ul>
-      <% @locatario.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-  </div>
-  </div>
-  <div class="container">
-  <div class="col-md-12">
-  <div class="CSS_Table_Example">
-    <table>
-      <tr>
-          <td><%= f.label :nombre %></td>
-          <td><%= f.label :apellido %></td>
-          <td><%= f.label :ci %></td>
-          <td><%= f.label :telefono %></td>
-          <td><%= f.label :email %></td>
-          <td>
-            Acciones
-          </td>
-
-        </tr>
-        <tr>
-            <td><center><%= f.text_field :nombre, class:"form-control input-sm" %></center></td>
-            <td><center><%= f.text_field :apellido, class:"form-control input-sm" %></center></td>
-            <td><center><%= f.text_field :ci, class:"form-control input-sm"%></center></td>
-            <td><center><%= f.text_field :telefono, class:"form-control input-sm" %></center></td>
-            <td><center><%= f.text_field :email, class:"form-control input-sm" %></center></td>
-            <td><center>
-               <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
+    <div class"row">
+      <div class="col-md-10 col-md-offset-1">
+        <% if @locatario.errors.any? %>
+          <div  class="alert alert-dismissible alert-danger">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+              <h2><%= pluralize(@locatario.errors.count, "error") %> complete los datos antes de guardar:</h2>
+                <ul>
+                  <% @locatario.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                  <% end %>
+                </ul>
+          </div>
+          <% end %>
+        <div class="CSS_Table_Example">
+          <table>
+            <tr>
+              <td><%= f.label :nombre %></td>
+              <td><%= f.label :apellido %></td>
+              <td><%= f.label :ci %></td>
+              <td><%= f.label :telefono %></td>
+              <td><%= f.label :email %></td>
+              <td>Acciones</td>
+            </tr>
+            <tr>
+              <td><center><%= f.text_field :nombre, class:"form-control input-sm" %></center></td>
+              <td><center><%= f.text_field :apellido, class:"form-control input-sm" %></center></td>
+              <td><center><%= f.text_field :ci, class:"form-control input-sm"%></center></td>
+              <td><center><%= f.text_field :telefono, class:"form-control input-sm" %></center></td>
+              <td><center><%= f.text_field :email, class:"form-control input-sm" %></center></td>
+              <td><center>
+                <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
                   <span class="glyphicon glyphicon-floppy-disk"></span>
                 <% end %>
                 <button type="reset" class="btn btn-info btn-sm">
                       <i class="glyphicon glyphicon-refresh"></i>
-                  </button>
-            </center></td>
-          </tr>
-    </table>
-  </div>
-  </div>  
-  </div>  
-<% end %>
+                </button></center></td>
+            </tr>
+          </table>
+        </div>
+      </div>  
+    </div>  
+    <% end %>
+  </div> 
