--- a/EncarAlquiler/app/views/locatarios/new.html.erb
+++ b/EncarAlquiler/app/views/locatarios/new.html.erb
@@ -1,6 +1,11 @@
-<h1 class="text-center text-uppercase">
-	Nuevo locatario
-	<%= link_to glyph(:arrow_left), locatarios_path, class: 'btn btn-default btn-sm' %>
-</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+			<h1 class="mycss">
+				Nuevo locatario
+				<%= link_to glyph(:arrow_left), locatarios_path, class: 'btn btn-default btn-sm' %>
+			</h1>
+		</div>
+	</div>
+</div>
 <%= render 'form' %>
-
