--- a/EncarAlquiler/app/views/pagos/_form.html.erb
+++ b/EncarAlquiler/app/views/pagos/_form.html.erb
@@ -1,26 +1,22 @@
 <%= form_for(@pago) do |f| %>
-  <div class="container">
-  <div class="col-md-12">
-  <% if @pago.errors.any? %>
-    <div  class="alert alert-dismissible alert-danger">
-      <button type="button" class="close" data-dismiss="alert">×</button>
-      <h2><%= pluralize(@pago.errors.count, "error") %> complete los datos antes de guardar:</h2>
-      <ul>
-      <% @pago.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<div class="container">
+  <div class"row">
+    <div class="col-md-10 col-md-offset-1">
+      <% if @pago.errors.any? %>
+        <div  class="alert alert-dismissible alert-danger">
+          <button type="button" class="close" data-dismiss="alert">×</button>
+            <h2><%= pluralize(@pago.errors.count, "error") %> complete los datos antes de guardar:</h2>
+              <ul>
+                <% @pago.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+                <% end %>
+              </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
-  </div>
-  </div>
-  <div class="container">
-    <div class="col-md-2">
-    </div>
-    <div class="col-md-8">
-      <div class="CSS_Table_Example">
-        <table >
-          <tr>
+      <div class="col-md-8 col-md-offset-2">
+        <div class="CSS_Table_Example">
+          <table >
+            <tr>
               <td><%= f.label :reserva_id %></td>
               <td><%= f.label :montoapagar %></td>
               <td>Acciones</td>
@@ -36,12 +32,13 @@
                   <% end %>
                   <button type="reset" class="btn btn-info btn-sm">
                       <i class="glyphicon glyphicon-refresh"></i>
-                  </button>
-              </center></td>
-            </tr>
-        </table>
+                  </button></center></td>
+              </tr>
+          </table>
+        </div>
       </div>
     </div>
   </div>
+</div>
   <% end %>
 
