--- a/EncarAlquiler/app/views/pagos/edit.html.erb
+++ b/EncarAlquiler/app/views/pagos/edit.html.erb
@@ -1,7 +1,16 @@
-<h1 class="text-center text-uppercase container">
-	Editar Pago 
-	<%= link_to glyph(:arrow_left), pagos_path, class: 'btn btn-default btn-sm' %>
-</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+			<div class="col-md-8 col-md-offset-2">
+				<h1 class="mycss">
+					Editar Pago
+					<%= link_to glyph(:arrow_left), pagos_path, class: 'btn btn-default btn-sm' %>
+				</h1>
+			</div>
+		</div>
+	</div>
+</div>
 <%= render 'form' %>
+
 
 
