--- a/EncarAlquiler/app/views/reservas/new.html.erb
+++ b/EncarAlquiler/app/views/reservas/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-10 col-md-offset-1">
+		<div class="col-md-12">
 			<h1 class="mycss">
 			Nueva Reserva
 			<%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-primary btn-sm' %>
