--- a/EncarAlquiler/app/views/reservas/show.html.erb
+++ b/EncarAlquiler/app/views/reservas/show.html.erb
@@ -1,10 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12 col-md-offset-1">
-      <h1 class="mycss">Reserva</h1>
-        <div class="col-md-12">
+    <div class="col-md-12">
+      <h1 class="mycss">
+        Reserva
+      </h1>
         <div class="CSS_Table_Example">
-    <table>
+          <table>
             
               <tr>
               	<td class="text-center">Locatario</th>
@@ -15,12 +16,13 @@
             
             
              <tr>
-                	<td><%= @reserva.locatario_id %></td>
-                  <td><%= @reserva.fecha_reserva %></td>
-                  <td><%= @reserva.monto %></td>
-                  <td><%= link_to glyph(:pencil), edit_reserva_path(@reserva), class: 'btn btn-warning btn-sm' %> <%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-info btn-sm' %> </td>
-            </tr>
-	   </table>
+                	<td><center><%= @reserva.locatario_id %></center></td>
+                  <td><center><%= @reserva.fecha_reserva %></center></td>
+                  <td><center><%= @reserva.monto %></center></td>
+                  <td><center><%= link_to glyph(:pencil), edit_reserva_path(@reserva), class: 'btn btn-warning btn-sm' %> <%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-default btn-sm' %></center></td>
+              </tr>
+	        </table>
+        </div>
+    </div>
   </div>
-</div>
 </div>
