--- a/EncarAlquiler/app/views/tipos/_form.html.erb
+++ b/EncarAlquiler/app/views/tipos/_form.html.erb
@@ -1,45 +1,37 @@
-<%= form_for(@tipo) do |f| %> <div class="container">
-  <div class="col-md-12">
-  <% if @tipo.errors.any? %>
-    <div  class="alert alert-dismissible alert-danger">
-      <button type="button" class="close" data-dismiss="alert">×</button>
-      <h2><%= pluralize(@tipo.errors.count, "error") %> complete los datos antes de guardar:</h2>
-      <ul>
-      <% @tipo.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<%= form_for(@tipo) do |f| %> 
+<div class="container">
+  <div class"row">
+    <div class="col-md-10 col-md-offset-1">
+      <% if @tipo.errors.any? %>
+        <div  class="alert alert-dismissible alert-danger">
+          <button type="button" class="close" data-dismiss="alert">×</button>
+            <h2><%= pluralize(@tipo.errors.count, "error") %> complete los datos antes de guardar:</h2>
+              <ul>
+                <% @tipo.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+                <% end %>
+              </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
-  </div>
-  </div>
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-8 col-md-offset-2">
     <div class="CSS_Table_Example">
       <table>
           <tr>
-            <td>
-              <%= f.label :nombre %>
-            </td>
-            <!--ACCIONES-->
-            <td>
-              Acciones
-            </td>
+            <td><%= f.label :nombre %></td>
+            <td>Acciones</td>
           </tr>
           <tr>
-            <td>
-              <%= f.text_field :nombre, class:"form-control input-sm" %>
-            </td>
-            <td><center>
-              <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
+            <td><%= f.text_field :nombre, class:"form-control input-sm" %></td>
+            <td><center><%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
               <span class="glyphicon glyphicon-floppy-disk"></span>
               <% end %>
               <button type="reset" class="btn btn-info btn-sm">
-                      <i class="glyphicon glyphicon-refresh"></i>
-                  </button>
-              </center>
-            </td>
+                  <i class="glyphicon glyphicon-refresh"></i>
+              </button></center></td>
           </tr>
       </table>
     </div>
   </div>
+</div>
+</div>
 <% end %>
