--- a/EncarAlquiler/app/views/tipos/new.html.erb
+++ b/EncarAlquiler/app/views/tipos/new.html.erb
@@ -1,7 +1,14 @@
-<h1 class="text-center text-uppercase">
-	Nuevo tipo de habitacion
-    <%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-default btn-sm' %>
-</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+			<div class="col-md-8 col-md-offset-2">
+				<h1 class="mycss">
+					Nuevo Tipo 
+					<%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-default btn-sm' %>
+			</div>
+		</div>
+	</div>
+</div>
 <%= render 'form' %>
 
 
